--- a/index.html
+++ b/index.html
@@ -6,52 +6,53 @@
   <title>Bomgardner Banking Inc.</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <!-- FONT AWESOME ICONS -->
-  <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
-
-  <!-- Custom Styles -->
+  <!-- Your CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-light">
 
-  <!-- 🌙 Magical Header Banner -->
-  <header id="magic-header">
-    <div class="header-inner">
-      <span class="header-moon">🌙</span>
-      <h1 class="fw-bold mb-0">Bomgardner Banking Inc.</h1>
-      <span class="header-moon">✨</span>
-    </div>
-    <!-- Theme Toggle -->
-    <div class="witch-toggle">
-      <i id="theme-icon" class="fa-solid fa-moon"></i>
-    </div>
-  </header>
+  <!-- Header -->
+<header id="magic-header" class="py-4 text-center">
+  <div class="header-inner">
+    <span class="header-moon">🌙</span>
+    <h1 class="fw-bold mb-0">Bomgardner Banking Inc.</h1>
+    <span class="header-moon">✨</span>
+  </div>
+</header>
 
-  <!-- Navigation -->
-  <div class="container text-center my-4">
+  <!-- Centered Navigation -->
+  <div class="container text-center mb-4">
     <ul class="nav justify-content-center" id="bank-nav">
       <li class="nav-item">
-        <button class="nav-link active" onclick="showScreen('summary')">Summary</button>
+        <a class="nav-link active" data-screen="summary" href="#">Summary</a>
       </li>
       <li class="nav-item">
-        <button class="nav-link" onclick="showScreen('deposit')">Deposit</button>
+        <a class="nav-link" data-screen="deposit" href="#">Deposit</a>
       </li>
       <li class="nav-item">
-        <button class="nav-link" onclick="showScreen('withdraw')">Withdraw</button>
+        <a class="nav-link" data-screen="withdraw" href="#">Withdraw</a>
       </li>
     </ul>
+    <div class="witch-toggle">
+  <i id="theme-icon" class="bi bi-moon-stars"></i>
+</div>
   </div>
 
+  <!-- Main Content Container -->
   <div class="container">
+    <div id="alert-area">
 
-    <!-- Alerts appear here -->
-    <div id="alert-area"></div>
+    </div>
 
     <!-- SUMMARY SCREEN -->
-    <div id="summary" class="screen active">
+      <section id="summary" class="screen active">
 
       <!-- PROFILE CARD -->
       <div class="card mb-4 shadow-sm" style="max-width: 540px;">
@@ -61,35 +62,28 @@
           <div class="col-md-4">
             <img src="profile.jpg"
                  class="img-fluid rounded-start rounded-3"
-                 alt="Profile Picture">
+                 alt="Profile Picture"
+                 style="height: 100%; object-fit: cover;">
           </div>
 
-          <!-- Details -->
+          <!-- Profile Detail -->
           <div class="col-md-8">
             <div class="card-body">
+              <p class="card-text mb-0"><small class="text-body-secondary">Account Details</small></p>
 
-              <p class="mb-1"><small>Account Details</small></p>
+              <p class="card-text">
+                Account Number:
+                <span id="acct-number">********123</span>
+                <i class="bi bi-eye-slash ms-2" id="toggle-acct"></i><br>
 
-                <p class="mb-1">
-  Account Number:
-  <span id="account-no-text">********866</span>
-</p>
+                Account Holder Name: <strong>Becca</strong>
+              </p>
 
-<p class="mb-2">
-  <i id="see-account-number" 
-     class="fa-solid fa-eye-slash eye-toggle-icon"
-     title="Show/Hide Account Number"></i>
-</p>
+              <p class="card-text mb-0">
+                <small class="text-body-secondary">Account Balance</small>
+              </p>
 
-<p>
-  Account Holder: <strong>Becca</strong>
-</p>
-
-
-
-              <p class="mb-0"><small>Account Balance</small></p>
-              <p id="balance" class="fs-3 fw-semibold">$0.00</p>
-
+              <p class="card-text fs-3 fw-semibold" id="balance">$0.00</p>
             </div>
           </div>
 
@@ -97,27 +91,34 @@
       </div>
 
       <!-- TRANSACTIONS CARD -->
-      <div class="card shadow-sm mb-4">
+      <div class="card shadow-sm">
         <div class="card-header fw-semibold">Transactions</div>
         <div class="card-body" id="transactions"></div>
       </div>
-    </div>
 
+</section>
 
     <!-- DEPOSIT SCREEN -->
-    <div id="deposit" class="screen">
+    <section id="deposit" class="screen">
       <div class="card p-4 shadow-sm">
         <h3 class="mb-3">Deposit</h3>
-        <input type="number" id="deposit-amount" class="form-control mb-3" placeholder="Amount">
-        <button id="deposit-btn" class="btn btn-primary w-100">Deposit</button>
-      </div>
-    </div>
 
+        <input
+          type="number"
+          id="deposit-amount"
+          class="form-control mb-3"
+          placeholder="Amount"
+        >
+
+        <button id="deposit-btn" class="btn btn-primary w-100">
+          Deposit
+        </button>
+      </div>
+    </section>
 
     <!-- WITHDRAW SCREEN -->
-    <div id="withdraw" class="screen">
+    <section id="withdraw" class="screen">
       <div class="card p-4 shadow-sm">
-
         <h3 class="mb-3">Transfer Out</h3>
 
         <select id="transfer-type" class="form-select mb-3">
@@ -130,17 +131,18 @@
         <input type="number" id="withdraw-amount" class="form-control mb-2" placeholder="Amount">
         <input type="text" id="purpose" class="form-control mb-3" placeholder="Purpose">
 
-        <button id="withdraw-btn" class="btn btn-danger w-100">Send Money</button>
+        <button id="withdraw-btn" class="btn btn-danger w-100">
+          Send Money
+        </button>
       </div>
-    </div>
+    </section>
 
   </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Custom JS -->
+  <!-- Your JS -->
   <script src="app.js"></script>
-
 </body>
 </html>
